stephbuorg/codeserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: stephbuorg
  labels:
    app: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      hostNetwork: true
      containers:
      - name: server
        image: codercom/code-server
        imagePullPolicy: Always
        args: 
        - "-p"
        - "8081"
        - "--allow-http"
        ports:
        - containerPort: 8081
          hostPort: 8081
        securityContext:
          privileged: true
        volumeMounts:
        - name: codeserver-storage
          mountPath: /home/coder/project
      volumes:
      - name: codeserver-storage
        persistentVolumeClaim:
          claimName: codeserver-project-storage
