stephbuorg/dyndns-updater.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dyndns-updater-deployment
  namespace: stephbuorg
  labels:
    app: dyndns-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dyndns-updater
  template:
    metadata:
      name: dyndns-updater
      namespace: stephbuorg
      labels:
        app: dyndns-updater
    spec:
      hostname: dyndns-updater
      containers:
      - name: dyndns
        image: crazymax/ddns-route53:1.9.1
        args: ["--config", "/opt/dyndns/config.yaml"]
        imagePullPolicy: Always
        volumeMounts:
        - name: dyndns-config-storage
          mountPath: /opt/dyndns
      volumes:
      - name: dyndns-config-storage
        persistentVolumeClaim:
          claimName: dyndns-config-storage-claim
      dnsPolicy: ClusterFirstWithHostNet
      priority: 0
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
