stephbuorg/network-dns.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-dns-deployment
  namespace: stephbuorg
  labels:
    app: network-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-dns
  template:
    metadata:
      name: homedns
      namespace: stephbuorg
      labels:
        app: network-dns
        run: pihole
    spec:
      hostname: network-dns
      containers:
      - name: unbound
        image: mvance/unbound:latest
        ports:
        - name: dnsoverudp
          containerPort: 5353
          protocol: UDP
        - name: dnsovertcp
          containerPort: 5353
          protocol: TCP
        imagePullPolicy: Always
        volumeMounts:
        - name: unbound-dns-storage
          mountPath: /opt/unbound/etc/unbound/
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - name: dnsoverhttp
          containerPort: 53
          protocol: TCP
        - name: dnsoverudp
          containerPort: 53
          protocol: UDP
        - name: dnsmasq
          containerPort: 67
          protocol: UDP
        - name: adminwebhttp
          containerPort: 80
          protocol: TCP
        - name: adminwebhttps
          containerPort: 443
          protocol: TCP      
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "SYS_TIME"]
        volumeMounts:
        - name: pihole-dns-storage
          mountPath: /etc/pihole/
        - name: dnsmasq-dns-storage
          mountPath: /etc/dnsmasq.d/
      volumes:
      - name: unbound-dns-storage
        persistentVolumeClaim:
          claimName: unbound-dns-storage-claim
      - name: pihole-dns-storage
        persistentVolumeClaim:
          claimName: pihole-dns-storage-claim
      - name: dnsmasq-dns-storage
        persistentVolumeClaim:
          claimName: dnsmasq-dns-storage-claim  
      dnsPolicy: ClusterFirstWithHostNet
      priority: 0
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 300
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 300
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: stephbuorg
  labels:
    app: network-dns
    run: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dnsoverudp
  selector:
    run: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-adminweb
  namespace: stephbuorg  
  labels:
    app: network-dns
    run: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 8081
    targetPort: 80
    protocol: TCP
    name: adminwebhttp
  selector:
    run: pihole
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "ingress-pihole-adminweb"
  namespace: stephbuorg
  labels:
    app: network-dns
spec:
  rules:
    - host: pihole.internal.stephbu.org
      http:
        paths:
          - path: /admin
            backend:
              serviceName: pihole-adminweb
              servicePort: 8081
